--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Getting Started: Serving Web Content</title>
 </head>
 <body>
-    <p th:text="'Hello, ' + ${name} + !"/>
+    <p th:text="'Hello, ' + ${name} + '!'"/>
 </body>
 </html>
