--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -6,9 +6,15 @@
 </head>
 <body>
 <h1>Form</h1>
-<form action="#" th:action="@{/greeting}" th:object="${greeting}" method="post">
+<form action="#" th:action="@{/user}" th:object="${user}" method="post">
     <p>Id: <input type="text" th:field="*{id}" /></p>
-    <p>Message: <input type="text" th:field="*{content}" /></p>
+    <p>Name: <input type="text" th:field="*{name}" /></p>
+    <div>
+        <select th:field="*{gender}">
+            <option th:value="'M'" th:text="Male"></option>
+            <option th:value="'F'" th:text="Female"></option>
+        </select>
+    </div>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 </body>
