do result.html works with date

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -8,7 +8,9 @@
     <h1>Result</h1>
     <p th:text="'id: ' + ${user.id}"/>
     <p th:text="'content: ' + ${user.name}"/>
-    <p th:text="'gender: ' + ${user.gender}"
+    <p th:text="'gender: ' + ${user.gender}"/>
+    <p th:text="'birthday: ' + ${user.birthday}"/>
+
     <a href="/user">Submit another user</a>
 </body>
 </html>
