--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Form</h1>
-<form action="#" th:action="@{/user}" th:object="${user}" method="post">
+<form action="#" th:action="@{/greeting}" th:object="${user}" method="post">
     <p>Id: <input type="text" th:field="*{id}" /></p>
     <p>Name: <input type="text" th:field="*{name}" /></p>
     <div>
@@ -15,6 +15,7 @@
             <option th:value="'F'" th:text="Female"></option>
         </select>
     </div>
+    <p>Date: <input type="date" th:field="*{birthday}"/></p>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
 </form>
 </body>
